<resources>
    <string name="app_name">Kodlars</string>
    <string name="state_general_error_title">Something went wrong</string>
    <string name="state_general_error_instruction">Please try again</string>

    <!--SEARCH-->
    <string name="toolbar_action_close">Cancel</string>
    <string name="toolbar_search_title">Search</string>
    <string name="toolbar_sort_by_recent">Sort by recent</string>
    <string name="toolbar_sort_by_rank">Sort by rank</string>
    <string name="user_rank" translatable="false">#%s</string>
    <string name="user_language">%s points</string>
    <string name="state_history_empty_title">No recent searches</string>
    <string name="state_results_searching">Searching…</string>
    <string name="state_results_no_found">No results found</string>
    <string name="state_history_empty_instruction">Start searching by clicking search</string>
    <!--end of SEARCH-->

    <!--CHALLENGES-->
    <string name="challenge_toolbar_title">%s\'s challenges</string>
    <string name="challenge_tab_completed">Completed</string>
    <string name="challenge_tab_authored">Authored</string>
    <string name="state_all_fetched">All challenges has been loaded</string>
    <string name="state_error">Something went wrong. Please try again</string>
    <string name="state_challenges_empty_title">No challenges</string>
    <string name="state_challenges_empty_instruction">Check out other users</string>
    <!--end of CHALLENGES-->

    <!--CHALLENGE DETAIL-->
    <string name="detail_label_statistic">Statistics</string>
    <string name="detail_attempts">Attempts:</string>
    <string name="detail_compelted">Completed:</string>
    <string name="detail_stars">Stars:</string>
    <string name="detail_score">Vote score:</string>
    <string name="detail_label_description">Description</string>
    <string name="detail_label_contributors">Contributors wanted</string>
    <!--end of CHALLENGE DETAIL-->

</resources>
